--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json --clean --sort --format namespeced-json"
+    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json ./src/assets/i18n/de.json --clean --sort --format namespeced-json"
   },
   "private": true,
   "dependencies": {
